# Advent-of-Code-Solutions

./: .gitignore  README.md
2015/day_01/: solve.py
2015/day_02/: solve.py
2015/day_03/: solve.py
2015/day_04/: solve.py
2015/day_05/: input.txt  solve.py
2015/day_06/: input.txt  solve.py
2015/day_XX/: solve.py
2016/: solve.py
2016/day_01/: solve.py
2019/day1/: solve.py
2019/day3/: solve.py
2019/day4/: solve.py
2020/src/: Utils.kt
2020/src/day0/: Day0.kt
2020/src/day01/: ReportRepair.kt
2020/src/day02/: PasswordPhilosophy.kt
2020/src/day03/: TobogganTrajectory.kt
2020/src/day04/: PassportProcessing.kt
2020/src/day05/: BinaryBoarding.kt
2020/src/day06/: CustomCustoms.kt
2020/src/day07/: HandyHaversacks.kt
2020/src/day08/: HandheldHalting.kt
2020/src/day09/: EncodingError.kt
2020/src/day1/: ReportRepair.kt
2020/src/day10/: AdapterArray.kt
2020/src/day11/: SeatingSystem.kt
2020/src/day12/: RainRisk.kt
2020/src/day13/: ShuttleSearch.kt
2020/src/day2/: PasswordPhilosophy.kt
2020/src/day3/: TobogganTrajectory.kt
2020/src/day4/: PassportProcessing.kt
2020/src/day5/: BinaryBoarding.kt
2020/src/day6/: CustomCustoms.kt
2020/src/day7/: HandyHaversacks.kt
2020/src/day8/: HandheldHalting.kt
2020/src/dayXX/: DayXX.kt
2022/day1/: solve.py
2022/day2/: solve.py
2022/day_01/: solve.py
2022/day_02/: solve.py
2022/day_03/: solve.py
2022/day_04/: solve.py
2022/day_XX/: solve.py
2023/: pyproject.toml
2023/src/01/: solve.py
2023/src/02/: solve.py
2024/: pyproject.toml
day2/: solve.py
day3/: solve.py
(+8 files in other folders)
